<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/call_button"
        style="@style/DialogText"
        android:layout_alignParentTop="true"
        android:drawableStart="@drawable/ic_phone"
        android:text="@string/make_call" />

    <TextView
        android:id="@+id/phone_num_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/call_button"
        android:layout_below="@+id/call_button"
        android:layout_centerVertical="true"
        android:layout_marginStart="38dp" />

    <TextView
        android:id="@+id/mail_button"
        style="@style/DialogText"
        android:layout_below="@+id/phone_num_subtext"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_email"
        android:text="@string/type_email" />

    <TextView
        android:id="@+id/email_num_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mail_button"
        android:layout_below="@+id/mail_button"
        android:layout_centerVertical="true"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/no_sup_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:drawablePadding="8dp"
        android:padding="5dp"
        android:text="@string/no_supplier_info"
        android:textSize="22sp"
        android:visibility="gone" />
</RelativeLayout>