<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="16dp"
    android:paddingStart="11dp"
    android:paddingTop="16dp"
    android:paddingBottom="8dp"
    tools:context=".EditorActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/item_icon_ring"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="40dp">

        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_launcher_background" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/edit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_icon_ring"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_photo_background"
        android:text="@string/edit_image"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/item_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/stock_text_layout"
        android:layout_below="@+id/edit_image"
        android:layout_marginTop="10dp"
        android:text="@string/item_name"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/item_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_name_text"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/stock_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/item_name_edit"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stock_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stock"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/stock_capacity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/capacity"
            android:textSize="12sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/stock_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stock_text_layout"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/stock_amount_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/stock_capacity_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/optional" />

    </LinearLayout>

    <TextView
        android:id="@+id/supplier_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stock_edit_layout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:text="@string/supplier_info"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/supplier_phone_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/supplier_info"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="14dp"
        app:srcCompat="@drawable/ic_phone" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/supplier_info"
        android:layout_toEndOf="@+id/supplier_phone_icon"
        android:inputType="number"
        android:maxLines="1"
        android:hint="@string/supplier_phone_hint" />


    <ImageView
        android:id="@+id/supplier_email_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/supplier_phone_icon"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        app:srcCompat="@drawable/ic_email" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/supplier_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/supplier_phone_icon"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/supplier_email_icon"
        android:hint="@string/supplier_email_hint" />

    <TextView
        android:id="@+id/save_update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/save_update_button_bkg"
        android:text="@string/save"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

</RelativeLayout>